micro_imagen/k8s/micro_imagen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-imagen-deployment
  namespace: micros
spec:
  selector:
    matchLabels:
      app: micro-imagen
  replicas: 1
  template:
    metadata:
      labels:
        app: micro-imagen
    spec:
      containers:
        - name: micro-imagen
          image: micro-imagen:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-imagen-clusterip
  namespace: micros
spec:
  ports:
    - protocol: "TCP"
      port: 8080        # The port inside the cluster
      targetPort: 8080  # The port exposed by the service
  type: NodePort        # Type of service
  selector:
    app: micro-imagen
