micro_imagen/k8s/ingress_imagen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imagen-ingress
  namespace: micros
spec:
  tls:
  - hosts:
      - microsimage.info
    secretName: my-micros-certs      
  rules:   
    - host: microsimage.info
      http:   
        paths:   
          - path: /rest 
            pathType: Prefix   
            backend:   
              service:   
                name: servicio-hola-clusterip   
                port:   
                  number: 8080
          - path: /image   
            pathType: Prefix   
            backend:   
              service:   
                name: servicio-imagen-clusterip   
                port:   
                  number: 8080
          - path: /boton   
            pathType: Prefix   
            backend:   
              service:   
                name: servicio-boton-clusterip   
                port:   
                  number: 8080
